--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@
 ./vendor/MarkupSafe-0.23.tar.gz
 ./vendor/Jinja2-2.7.3.tar.gz
 ./vendor/aspen-jinja2-0.4.tar.gz
+    ./vendor/six-1.9.0.tar.gz
+    ./vendor/webencodings-0.5.1.tar.gz
+    ./vendor/html5lib-0.999999999.tar.gz
 ./vendor/bleach-2.0.0.tar.gz
 
 ./vendor/psycopg2-2.5.1.tar.gz
@@ -34,7 +37,6 @@
 ./vendor/contextlib2-0.5.4.tar.gz
 ./vendor/raven-6.0.0.tar.gz
 
-    ./vendor/six-1.9.0.tar.gz
   ./vendor/python-dateutil-2.5.3.tar.gz
   ./vendor/ipaddress-1.0.16.tar.gz
 ./vendor/Faker-0.7.3.tar.gz
